# SmartKG

./: .gitmodules  README.md
CREModel/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
CREModel/app/: app.sh  main.py
CREModel/app/model/: model.py
CREModel/app/protos/: relation.proto  relation_pb2.py  relation_pb2_grpc.py
CREModel/app/services/: relation_service.py
CREModel/app/tests/: test.py
CREModel/model/: config.py  main.py  model.py  run.sh  sampler.py  trainer.py
backend/: CMakeLists.txt  README.md  move.sh
backend/CRE/: CREServlet.cpp  CREServlet.h  Protocol.cpp  Protocol.h  RelationClient.cpp  RelationClient.h  my_module.cpp  my_module.h
backend/database/: create.sql
backend/protos/: relation.grpc.pb.cc  relation.grpc.pb.h  relation.pb.cc  relation.pb.h
front/: package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: App.vue  main.ts
